syntax = "proto3";

option csharp_namespace = "GrpcSample";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloAgain (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  int32 number=2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
